[package]
name = "Qubite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
Matrix = { git = "https://github.com/caratheodori/Matrix_rust.git"}
Binary = { git = "https://github.com/caratheodori/Binary_Rust.git"}
num-complex = "0.4.4"
